--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <link rel="apple-touch-icon" sizes="152x152" href="/icons/apple-icon-152x152.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-icon-180x180.png">
     <link rel="icon" type="image/png" sizes="192x192" href="/icons//android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/icons/froglogo.pngo">
+    <link rel="icon" type="image/png" sizes="32x32" href="/icons/froglogo.png">
     <link rel="icon" type="image/png" sizes="96x96" href="/icons/froglogo.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/icons/froglogo.png">
     <link rel="manifest" href="/manifest.json">
