--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Lily Pad Plunge YAY</title>
+    <title>Lily Pad Plunge</title>
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // MIT License
