--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>LilyPadPlunge</title>
 </head>
 <body>
+    <p>testing 1 2 3</p>
     <script src="src/portfolio.js"></script>
 </body>
 </html>
