--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LilyPadPlunge</title>
+    <title>Your Website</title>
+    <!-- Link to your CSS file -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <p>testing 1 2 3</p>
+    <!-- Your website content -->
+    <div id="app"></div>
+    <!-- Link to your JavaScript file -->
     <script src="src/portfolio.js"></script>
 </body>
 </html>
