--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <!-- Your website content -->
     <div id="app"></div>
     <!-- Link to your JavaScript file -->
-    <script src="src/App.js"></script>
+    <script src="src/index.js"></script>
 </body>
 </html>
