--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <title>LilyPad Plunge</title>
 </head>
 <body>
-    <!-- Your website content -->
-    <div id="app"></div>
     <!-- Link to your JavaScript file -->
-    <script src="src/serviceWorker.js"></script>
+    <script src="src/App.test.js"></script>
 </body>
 </html>
