--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <!-- Link to your JavaScript file -->
-    <script src="src/containers/Main.js"></script>
+    <script src="src/pages/home/HomeComponent.js"></script>
 </body>
 </html>
